# naver_blog_pjt

./: CLAUDE.md  Process.md  README.md  post_to_blog.py  pyproject.toml
.claude/: .headroom_wrap_marker.json  settings.local.json
.claude/agents/: blog_automation_expert.md  blog_qa_engineer.md  mcp_integrator.md
.claude/skills/blog-automation-dev/: SKILL.md
.claude/skills/mcp-qa-robustness/: SKILL.md
.claude/skills/mcp-server-dev/: SKILL.md
.claude/skills/naver-blog-mcp-orchestrator/: SKILL.md
.serena/: project.yml
.tokensave/: branch-meta.json  config.json  tokensave.db
_workspace/: 00_input.md
docs/: architecture.md  category-list-research.md  claude-desktop-guide.md  delete-post-research.md  deployment-guide.md  feature-priority-analysis.md  image-upload-research.md  implementation-plan.md  installation-guide.md  progress.md  refactoring_plan.md  style-guide.md  user-guide.md  개선내용_20260615.md  에러로그.md  의사결정.md  프로젝트개요.md
scripts/: bootstrap_session.py  monitor_selectors.py  post_to_blog.py  smoke_test.py  test_paste_posting.py
src/naver_blog_mcp/: config.py  server.py
src/naver_blog_mcp/automation/: category_actions.py  comment_actions.py  constants.py  draft_actions.py  editor_input.py  image_upload.py  login.py  post_actions.py  selectors.py  stats_actions.py
src/naver_blog_mcp/mcp/: tools.py
src/naver_blog_mcp/services/: session_manager.py
src/naver_blog_mcp/utils/: error_handler.py  exceptions.py  iframe_helper.py  retry.py  selector_helper.py  trace_manager.py
tests/: conftest.py  post_technical_exam.py  test_category_list.py  test_connection.py  test_error_handling.py  test_iframe_helper.py  test_image_upload.py  test_image_upload_helpers.py  test_integration_v2.py  test_login.py  test_post_write.py
