[project]
name = "naver-blog-mcp"
version = "0.1.0"
description = "Naver Blog MCP server using Playwright automation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.20.0",
    "playwright>=1.40.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "aiofiles>=23.0.0",
    "markdown>=3.5.0",
    "pillow>=12.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-playwright>=0.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
naver-blog-mcp = "naver_blog_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e: 라이브 네이버 로그인이 필요한 종단 테스트 (RUN_LIVE_TESTS=true 일 때만 실행)",
    "integration: 여러 모듈을 함께 검증하는 통합 테스트",
    "unit: 외부 의존이 없는 단위 테스트",
]

[tool.pyright]
# pyright가 프로젝트 가상환경(.venv)을 사용하도록 지정해야
# playwright 등 의존성의 reportMissingImports 오탐을 방지한다.
venvPath = "."
venv = ".venv"
include = ["src"]
pythonVersion = "3.13"

[tool.black]
line-length = 88
target-version = ['py313']

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
# ruff rules: enable common checks, ignore project-specific false positives as needed
select = ["E", "F", "I", "B", "C", "S"]
extend-ignore = ["E203"]

[tool.ruff.lint.mccabe]
# Playwright 자동화 특성상 복잡한 함수가 필요 (publish_post, navigate 등)
max-complexity = 20

[tool.ruff.lint.per-file-ignores]
# Playwright 자동화 코드는 셀렉터 탐색 시 except: pass/continue 패턴이 의도적임
"src/naver_blog_mcp/automation/*.py" = ["S110", "S112"]
"src/naver_blog_mcp/utils/selector_helper.py" = ["S112"]
"src/naver_blog_mcp/utils/iframe_helper.py" = ["S112"]

[tool.mypy]
python_version = "3.13"
strict = true

[tool.isort]
profile = "black"
line_length = 88
